--- a/requirements.txt
+++ b/requirements.txt
@@ -30,6 +30,7 @@ flake8-rst-docstrings==0.2.5
 flake8-string-format==0.3.0
 gitdb==4.0.9
 GitPython==3.1.27
+gunicorn==20.1.0
 identify==2.4.11
 iniconfig==1.1.1
 isort==5.10.1
@@ -40,6 +41,7 @@ nodeenv==1.6.0
 packaging==21.3
 pbr==5.8.1
 pep8-naming==0.11.1
+pika==1.3.0
 platformdirs==2.5.1
 pluggy==1.0.0
 pre-commit==2.15.0
@@ -69,4 +71,3 @@ types-PyYAML==6.0.4
 typing-extensions==3.10.0.2
 virtualenv==20.13.2
 wemake-python-styleguide==0.16.0
-gunicorn
