--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,11 @@ asgiref==3.5.0
 astor==0.8.1
 attrs==21.4.0
 bandit==1.7.2
+black==22.6.0
+certifi==2022.6.15
 cfgv==3.3.1
+charset-normalizer==2.1.1
+click==8.1.3
 darglint==1.8.1
 distlib==0.3.4
 Django==3.2
@@ -32,6 +36,7 @@ gitdb==4.0.9
 GitPython==3.1.27
 gunicorn==20.1.0
 identify==2.4.11
+idna==3.3
 iniconfig==1.1.1
 isort==5.10.1
 mccabe==0.6.1
@@ -39,6 +44,7 @@ mypy==0.931
 mypy-extensions==0.4.3
 nodeenv==1.6.0
 packaging==21.3
+pathspec==0.9.0
 pbr==5.8.1
 pep8-naming==0.11.1
 pika==1.3.0
@@ -57,6 +63,7 @@ python-dateutil==2.8.2
 python-dotenv==0.19.2
 pytz==2021.3
 PyYAML==6.0
+requests==2.28.1
 restructuredtext-lint==1.4.0
 six==1.16.0
 smmap==5.0.0
@@ -68,6 +75,9 @@ toml==0.10.2
 tomli==2.0.1
 types-pytz==2021.3.5
 types-PyYAML==6.0.4
+types-requests==2.28.9
+types-urllib3==1.26.23
 typing-extensions==3.10.0.2
+urllib3==1.26.11
 virtualenv==20.13.2
 wemake-python-styleguide==0.16.0
