--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,9 @@ cfgv==3.3.1
 charset-normalizer==2.1.1
 click==8.1.3
 darglint==1.8.1
+Deprecated==1.2.13
 distlib==0.3.4
+distro==1.7.0
 Django==3.2
 django-debug-toolbar==3.2.4
 django-split-settings==1.1.0
@@ -42,6 +44,7 @@ isort==5.10.1
 mccabe==0.6.1
 mypy==0.931
 mypy-extensions==0.4.3
+netaddr==0.8.0
 nodeenv==1.6.0
 packaging==21.3
 pathspec==0.9.0
@@ -61,6 +64,7 @@ pyparsing==3.0.7
 pytest==6.2.5
 python-dateutil==2.8.2
 python-dotenv==0.19.2
+python-logstash==0.4.8
 pytz==2021.3
 PyYAML==6.0
 requests==2.28.1
@@ -81,4 +85,5 @@ typing-extensions==3.10.0.2
 urllib3==1.26.11
 virtualenv==20.13.2
 wemake-python-styleguide==0.16.0
+wrapt==1.14.1
 yookassa==2.3.2
